add support for sessions
