# langfuse-core/openapi-spec/openapi-server.yaml
@@ -1116,6 +1116,13 @@ components:
         name:
           type: string
           nullable: true
+        input:
+          nullable: true
+        output:
+          nullable: true
+        sessionId:
+          type: string
+          nullable: true
         release:
           type: string
           nullable: true
@@ -1724,6 +1731,13 @@ components:
           type: string
           nullable: true
         externalId:
+          type: string
+          nullable: true
+        input:
+          nullable: true
+        output:
+          nullable: true
+        sessionId:
           type: string
           nullable: true
         release:
